--- a/index.html
+++ b/index.html
@@ -206,20 +206,25 @@
             return path; // 假设文件名以 .md 结尾
         }
 
-        // 加载单篇文章
         async function loadArticle(path) {
             try {
+                // 1. 加载 Markdown 文件
                 const response = await fetch(`https://raw.githubusercontent.com/${config.githubUser}/${config.repo}/main/${path}`);
                 if (!response.ok) throw new Error('文章加载失败');
                 const mdContent = await response.text();
+
+                // 2. 解析 Markdown 为 HTML
                 const htmlContent = marked.parse(mdContent);
-                
-                // 设置内容
+
+                // 3. 提取并替换图片路径
+                const modifiedHtmlContent = replaceImageSources(htmlContent, path);
+
+                // 4. 设置内容
                 document.getElementById('article-content').innerHTML = `
-                    <div class="markdown-body">${htmlContent}</div>
+                    <div class="markdown-body">${modifiedHtmlContent}</div>
                 `;
 
-                // 确保内容加载后再滚动
+                // 5. 自动滚动到内容
                 window.requestAnimationFrame(() => {
                     const articleContent = document.getElementById('article-content');
                     if (articleContent) {
@@ -233,6 +238,42 @@
                 console.error('加载文章内容失败:', error);
                 document.getElementById('article-content').innerHTML = '<p>无法加载文章内容</p>';
             }
+        }
+
+        // 替换图片路径
+        function replaceImageSources(htmlContent, path) {
+            // 创建一个临时的 DOM 元素来解析 HTML
+            const parser = new DOMParser();
+            const doc = parser.parseFromString(htmlContent, 'text/html');
+
+            // 获取所有的图片元素
+            // const images = Array.from(doc.querySelectorAll('img'));
+            const images = doc.querySelectorAll('img');
+            for (let i = 0; i < images.length; i++) {
+                const img = images[i];
+                const src = img.getAttribute('src');
+                if (src) {
+                    // 替换为新的图片路径
+                    const newPath = getDirectoryPath(path);
+                    const newSrc = `https://raw.githubusercontent.com/${config.githubUser}/${config.repo}/main/${newPath}/${src}`;
+                    img.setAttribute('src', newSrc);
+                }
+            }
+            // 返回修改后的 HTML
+            return doc.body.innerHTML;
+        }
+        
+        function getDirectoryPath(path) {
+            // 获取最后一个 '/' 的索引
+            const lastSlashIndex = path.lastIndexOf('/');
+
+            // 如果路径中没有 '/'，返回空字符串
+            if (lastSlashIndex === -1) {
+                return '';
+            }
+
+            // 返回最后一个 '/' 前的所有字符
+            return path.substring(0, lastSlashIndex);
         }
 
         // 初始化加载
