--- a/project.html
+++ b/project.html
@@ -70,15 +70,7 @@
 
     <!-- 简介区域 -->
     <header>
-        <h1>waiwai space</h1>
-        <p>The world is deep.And deeper than the day could read. • <a href="https://github.com/yourusername" target="_blank">GitHub 主页</a></p>
+        <h1>waiting ... ...</h1>
     </header>
-
-    <!-- 跳转按钮 -->
-    <div class="button-container">
-        <a href="knowledge.html" class="button">Go to Knowledge</a>
-        <a href="project.html" class="button">Go to Project</a>
-        <a href="tool.html" class="button">Go to Tool</a>
-    </div>
 </body>
 </html>
