--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
         <p></p>
         <p></p>
         <p>👀 Hi, my name is 🦘 waiwai</p>
-        <p>👨‍💻 I'm a undergraduate and I am interested in binary and CTF</p>
+        <p>👨‍💻 I'm an ordinary person</p>
         <p>👾 Welcome to communicate with me</p>
-        <p>📚 my motto: The world is deep.And deeper than the day could read.</p>
-        <p>❤️ interest: iot, kernel, boxing and others to be developed</p>
+        <p>📚 Motto: The world is deep.And deeper than the day could read.</p>
+        <p>❤️ Interest: All the interesting things</p>
         <p>📧 Email: <a href="mailto:waiwai.website.mail@gmail.com">waiwai.website.mail@gmail.com</a></p>
         <p>🔗 GitHub: <a href="https://github.com/waiwai24"target="_blank">https://github.com/waiwai24</a></p>
     
