--- a/project.html
+++ b/project.html
@@ -1,77 +1,236 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dark-mode</title>
-    <link rel="icon" href="favicon.png" type="image/png" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-    <title>waiwai space</title>
-    <style>
-        :root {
-            --bg: #f8f9fa;
-            --text: #212529;
-            --primary: #4263eb;
-            --bg-dark: #292C35;
-            --text-dark: #f8f9fa;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Project</title>
+  <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="header-style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+  <style>
+    :root{
+      --bg: #ffffff;
+      --text: #212529;
+      --muted: #6c757d;
+      --line: #e9ecef;
+      --card: #fbfdff;
+      --accent: #4263eb;
+      --glass: rgba(66,99,235,0.06);
+    }
 
-        body {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-            background: var(--bg);
-            color: var(--text);
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            transition: background 0.3s, color 0.3s;
-        }
+    body{
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 2rem;
+      background: var(--bg);
+      color: var(--text);
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      transition: background 0.25s ease, color 0.25s ease;
+    }
 
-        body.dark-mode {
-            background: var(--bg-dark);
-            color: var(--text-dark);
-        }
+    header{
+      margin-bottom: 1.25rem;
+    }
 
-        .button-container {
-            text-align: center;
-            margin-top: 2rem;
-        }
 
-        .button {
-            display: inline-block;
-            padding: 1rem 2rem;
-            font-size: 1.2rem;
-            color: white;
-            background-color: var(--primary);
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            text-decoration: none;
-        }
+    .project-list{
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+    }
 
-        .button:hover {
-            background-color: #365fcf;
-        }
-    </style>
+    /* 精致卡片样式（极简但更有质感） */
+    a.project-item{
+      display: grid;
+      grid-template-columns: 180px 1fr;
+      gap: 16px;
+      align-items: center;
+      text-decoration: none;
+      color: inherit;
+      background: linear-gradient(180deg, var(--card), #fff);
+      border-radius: 12px;
+      padding: 12px;
+      border: 1px solid var(--line);
+      box-shadow: 0 6px 18px rgba(17,24,39,0.06);
+      transition: transform 180ms ease, box-shadow 180ms ease, border-color 180ms ease, background 180ms ease;
+      overflow: hidden;
+    }
+
+    a.project-item:hover{
+      transform: translateY(-6px);
+      box-shadow: 0 18px 40px rgba(17,24,39,0.10);
+      border-color: rgba(66,99,235,0.12);
+      background: linear-gradient(180deg,#ffffff,#fbfdff);
+    }
+
+    /* 缩略图 */
+    .thumb{
+      width: 100%;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 10px;
+      background: linear-gradient(135deg,#eef2f7,#f8fbff);
+      box-shadow: inset 0 -8px 30px rgba(0,0,0,0.03);
+      flex-shrink: 0;
+    }
+
+    /* 元信息 */
+    .meta{
+      display:flex;
+      flex-direction:column;
+      gap:6px;
+      min-width:0;
+    }
+
+    .title{
+      font-size:1.05rem;
+      font-weight:650;
+      margin:0;
+      color:var(--text);
+      line-height:1.15;
+      display:block;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+
+    .desc{
+      margin:0;
+      color:var(--muted);
+      font-size:0.95rem;
+      line-height:1.5;
+      max-width:100%;
+      word-break:break-word;
+    }
+
+    /* 小的仓库元（位置预留，未来可显示 stars 等） */
+    .repo-meta{
+      display:flex;
+      gap:10px;
+      align-items:center;
+      margin-top:6px;
+      font-size:0.85rem;
+      color:var(--muted);
+    }
+
+    footer{
+      margin-top:2rem;
+      text-align:center;
+      color:var(--muted);
+      font-size:0.9rem;
+    }
+
+    /* 响应式优化 */
+    @media (max-width: 900px){
+      a.project-item{
+        grid-template-columns: 140px 1fr;
+      }
+      .thumb{ height:110px; }
+    }
+
+    @media (max-width: 600px){
+      body{ padding:1rem; max-width:100%; }
+      a.project-item{
+        grid-template-columns: 1fr;
+        grid-auto-rows: auto;
+        gap:12px;
+        align-items:start;
+      }
+      .thumb{ width:100%; height:160px; }
+      .title{ white-space:normal; }
+      .repo-meta{ flex-wrap:wrap; gap:8px 12px; }
+    }
+  </style>
 </head>
-<body>
-    <div class="themeMode">
-        <input type="checkbox" class="darkMode" id="darkMode" />
-        <label for="darkMode" class="label_darkMode">
-         <i class="fas fa-sun"></i>
-         <i class="fas fa-moon"></i>
-          <div class="ball"></div>
-        </label>
-    </div>
-  
-    <script src="scripts/config.js"></script>
-    <script src="scripts/themeManger.js"></script>
+<body class="project-page">
+  <header style="text-align: center;">
+    <h1 class="page-title"><a href="index.html">Project</a></h1>
+  </header>
 
-    <!-- 简介区域 -->
-    <header>
-        <h1>waiting ... ...</h1>
-    </header>
+  <main>
+    <div class="project-list" aria-live="polite">
+      <a class="project-item" href="https://github.com/waiwai24/rust-c2-framework" target="_blank" rel="noopener" aria-label="rust-c2-framework 仓库">
+        <img class="thumb" src="https://opengraph.githubassets.com/1/waiwai24/rust-c2-framework" alt="rust-c2-framework 仓库封面" loading="lazy" />
+        <div class="meta">
+          <h3 class="title">rust-c2-framework</h3>
+          <p class="desc">Rust 编写的 C2 框架</p>
+          <div class="repo-meta" data-repo="waiwai24/rust-c2-framework" aria-hidden="true">加载中...</div>
+        </div>
+      </a>
+
+      <a class="project-item" href="https://github.com/waiwai24/0101" target="_blank" rel="noopener" aria-label="0101 仓库">
+        <img class="thumb" src="https://opengraph.githubassets.com/1/waiwai24/0101" alt="0101 仓库封面" loading="lazy" />
+        <div class="meta">
+          <h3 class="title">0101</h3>
+          <p class="desc">个人笔记仓库</p>
+          <div class="repo-meta" data-repo="waiwai24/0101" aria-hidden="true">加载中...</div>
+        </div>
+      </a>
+    </div>
+  </main>
+
+  <script>
+    // 从 GitHub API 异步获取仓库元数据，并使用 localStorage 缓存
+    (async function() {
+      const metas = document.querySelectorAll('.repo-meta');
+      if (!metas || metas.length === 0) return;
+
+      const CACHE_DURATION = 3600 * 1000; // 缓存1小时
+
+      const renderMeta = (el, data) => {
+        const stars = data.stargazers_count ?? 0;
+        const lang = data.language ?? '';
+        const updated = data.updated_at ? new Date(data.updated_at).toLocaleDateString() : '';
+        el.innerHTML = ''
+          + '<span aria-hidden="true" style="display:inline-flex;align-items:center;gap:6px;"><i class="fas fa-star" style="color:#f4d35e"></i> ' + stars + '</span>'
+          + (lang ? (' <span style="margin-left:8px"><svg width="10" height="10" viewBox="0 0 10 10" fill="currentColor" style="vertical-align:middle;margin-right:6px;border-radius:50%;opacity:0.9"></svg><strong>' + lang + '</strong></span>') : '')
+          + (updated ? (' <span style="color:var(--muted);margin-left:10px">更新: ' + updated + '</span>') : '');
+      };
+
+      const renderError = (el, repo) => {
+        el.textContent = '';
+        const a = document.createElement('a');
+        a.href = 'https://github.com/' + repo;
+        a.target = '_blank';
+        a.rel = 'noopener';
+        a.textContent = '查看仓库';
+        el.appendChild(a);
+      };
+
+      for (const el of metas) {
+        const repo = el.dataset.repo;
+        if (!repo) continue;
+
+        const cacheKey = `repo_meta_${repo.replace('/', '_')}`;
+        
+        try {
+          const cachedItem = localStorage.getItem(cacheKey);
+          if (cachedItem) {
+            const { data, timestamp } = JSON.parse(cachedItem);
+            if (Date.now() - timestamp < CACHE_DURATION) {
+              renderMeta(el, data);
+              continue;
+            }
+          }
+
+          const res = await fetch('https://api.github.com/repos/' + repo);
+          if (!res.ok) throw new Error('HTTP ' + res.status);
+          const newData = await res.json();
+          
+          renderMeta(el, newData);
+          localStorage.setItem(cacheKey, JSON.stringify({ data: newData, timestamp: Date.now() }));
+
+        } catch (err) {
+          renderError(el, repo);
+          console.error('获取仓库信息失败:', repo, err);
+        }
+      }
+    })();
+  </script>
+
+  <footer class="footer">
+    <p>&copy; 2024 waiwai24. All rights reserved.</p>
+  </footer>
 </body>
 </html>
