--- a/tool.html
+++ b/tool.html
@@ -6,6 +6,7 @@
     <title>Custom Google Search</title>
     <link rel="icon" href="favicon.png" type="image/png" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="header-style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <style>
         body {
@@ -17,28 +18,25 @@
             margin: 0;
             padding-top: 40px; /* 添加顶部内边距 */
             font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
+            background-color: #ffffff;
             transition: background 0.3s, color 0.3s;
         }
 
-        body.dark-mode {
-            background-color: #292C35;
-            color: white;
-        }
 
         .search-container {
             display: flex;
             flex-direction: column;
             align-items: center;
             width: 100%;
-            max-width: 600px;
+            max-width: 800px;
             margin: 0 auto;
         }
+
 
         .search-container p {
             margin-bottom: 10px;
             font-size: 18px;
-            color: inherit; /* 继承父元素的颜色 */
+            color: inherit;
         }
 
         input[type="text"] {
@@ -91,6 +89,8 @@
             margin-top: 20px;
             width: 100%;
             max-width: 1200px;
+            margin-left: auto; /* 新增：使其水平居中 */
+            margin-right: auto; /* 新增：使其水平居中 */
         }
 
         .column {
@@ -130,77 +130,74 @@
     </style>
 </head>
 <body>
-    <div class="themeMode">
-        <input type="checkbox" class="darkMode" id="darkMode" />
-        <label for="darkMode" class="label_darkMode">
-            <i class="fas fa-sun"></i>
-            <i class="fas fa-moon"></i>
-            <div class="ball"></div>
-        </label>
+    <div class="main-content" style="flex-grow: 1; width: 100%;">
+        <div class="search-container">
+            <h1 class="page-title"><a href="index.html">Tool</a></h1>
+            <form action="https://www.google.com/search" method="get">
+                <input type="text" name="q" placeholder="Google Search..." size="40"size="40">
+            </form>
+        </div>
+
+        <div class="links">
+            <div class="column">
+                <h3>Binary :</h3>
+                <a href="https://shell-storm.org/shellcode/index.html" target="_blank">Shellcode</a>
+                <a href="https://libc.rip/" target="_blank">Libc Search </a>
+                <a href="https://libc.blukat.me/" target="_blank">Libc Search</a>
+                <a href="https://shell-storm.org/x86doc/index.html" target="_blank">x86 Opcode</a>
+                <a href="https://shell-storm.org/online/Online-Assembler-and-Disassembler/" target="_blank">Asm and Disasm</a>
+                <a href="https://elixir.bootlin.com" target="_blank">Source Code</a>
+                <a href="https://makelinux.github.io/kernel/map/" target="_blank">Kernel Map</a>
+                <a href="https://www.virustotal.com/gui/home/upload" target="_blank">VirusTotal</a>
+                <a href="https://s.threatbook.com/" target="_blank">X ThreatBook</a>
+                <a href="https://www.hybrid-analysis.com/" target="_blank">Hybrid Analysis</a>
+                <a href="https://www.joesandbox.com/" target="_blank">Joe Sandbox</a>
+                <a href="https://www.cve.org/" target="_blank">CVE</a>
+                <a href="https://0day.today/" target="_blank">0Day</a>
+                <a href="https://vuldb.com/?my.submits" target="_blank">Vuldb</a>
+                <a href="https://www.exploit-db.com/shellcodes" target="_blank">Exploit Database</a>
+            </div>
+            <div class="column">
+                <h3>Server :</h3>
+                <a href="https://app.rainyun.com/dashboard" target="_blank">Rain</a>
+                <a href="https://sachk.189.cam/dashboard" target="_blank">VPN</a>
+                <a href="https://home.console.aliyun.com/home/dashboard/ProductAndService" target="_blank">Aliyun</a>
+                <a href="https://console.cloud.tencent.com/" target="_blank">Tencent Cloud</a>
+                <a href="https://console.huaweicloud.com/console" target="_blank">Huawei Cloud</a>
+                <a href="https://app.vmiss.com/clientarea.php" target="_blank">VMISS</a>
+                <a href="https://dash.cloudflare.com/" target="_blank">Cloudflare</a>
+                <a href="https://platform.closeai-asia.com/dashboard/" target="_blank">CloseAI</a>
+                <a href="https://yeka.ai/pay-service" target="_blank">WildCard</a>
+                <a href="https://platform.deepseek.com" target="_blank">Deepseek</a>
+                <a href="https://anyrouter.top/console" target="_blank">Anyrouter</a>
+                <a href="https://openrouter.ai/" target="_blank">Openrouter</a>
+                <a href="https://api.v3.cm/panel" target="_blank">Api</a>
+            </div>
+            <div class="column">
+                <h3>Other</h3>
+                <a href="https://gchq.github.io/CyberChef/" target="_blank">CyberChef</a>
+                <a href="https://www.revshells.com/" target="_blank">RRevshell</a>
+                <a href="https://test.ustc.edu.cn/" target="_blank">USTC Test Speed </a>
+                <a href="https://www.speedtest.net/" target="_blank">Speed Test</a>
+                <a href="https://www.dnsgrep.cn/" target="_blank">Dnsgrep</a>
+                <a href="https://tool.chinaz.com/" target="_blank">CChinaz</a>
+                <a href="https://ping.pe/" target="_blank">Ping Test</a>
+                <a href="https://fofa.info/" target="_blank">FOFA</a>
+                <a href="https://www.zoomeye.org/discover" target="_blank">Zoomeye</a>
+                <a href="https://www.shodan.io/" target="_blank">Shodan</a>
+                <a href="https://www.censys.io/" target="_blank">Censys</a>
+                <a href="https://www.binaryedge.io/" target="_blank">BinaryEdge</a>
+                <a href="https://hunter.qianxin.com/" target="_blank">QiAnXin</a>
+                <a href="https://dl.partian.co/" target="_blank">Fortinet</a>
+                <a href="https://www.wenshushu.cn/" target="_blank">Wenshushu</a>
+            </div>
+        </div>
     </div>
 
-    <div class="search-container">
-        <h1><a href="index.html" style="text-decoration: none; color: inherit;">waiwai space - Tool</a></h1>
-        <form action="https://www.google.com/search" method="get">
-            <input type="text" name="q" placeholder="Google Search...">
-        </form>
-    </div>
-
-    <div class="links">
-        <div class="column">
-            <h3>Binary :</h3>
-            <a href="https://gchq.github.io/CyberChef/" target="_blank">CyberChef</a>
-            <a href="https://shell-storm.org/shellcode/index.html" target="_blank">Shellcode</a>
-            <a href="https://libc.rip/" target="_blank">Libc Search </a>
-            <a href="https://libc.blukat.me/" target="_blank">Libc Search</a>   
-            <a href="https://shell-storm.org/x86doc/index.html" target="_blank">x86 Opcode</a>
-            <a href="https://shell-storm.org/online/Online-Assembler-and-Disassembler/" target="_blank">Asm and Disasm</a>
-            <a href="https://elixir.bootlin.com" target="_blank">Source Code</a>
-            <a href="https://makelinux.github.io/kernel/map/" target="_blank">Kernel Map</a>
-            <a href="https://www.virustotal.com/gui/home/upload" target="_blank">VirusTotal</a>
-            <a href="https://s.threatbook.com/" target="_blank">X ThreatBook</a>
-            <a href="https://www.hybrid-analysis.com/" target="_blank">Hybrid Analysis</a>
-            <a href="https://www.joesandbox.com/" target="_blank">Joe Sandbox</a>
-            <a href="https://www.cve.org/" target="_blank">CVE</a>
-            <a href="https://0day.today/" target="_blank">0Day</a>
-            <a href="https://www.exploit-db.com/shellcodes" target="_blank">Exploit Database</a>
-        </div>
-        <div class="column">
-            <h3>Server :</h3>
-            <a href="https://buuoj.cn/challenges" target="_blank">Buu</a>
-            <a href="https://home.console.aliyun.com/home/dashboard/ProductAndService" target="_blank">Aliyun</a>
-            <a href="https://console.cloud.tencent.com/" target="_blank">Tencent Cloud</a>
-            <a href="https://console.huaweicloud.com/console" target="_blank">Huawei Cloud</a>
-            <a href="https://app.vmiss.com/clientarea.php" target="_blank">VMISS</a>
-            <a href="https://dash.cloudflare.com/" target="_blank">Cloudflare</a>
-            <a href="https://platform.closeai-asia.com/dashboard/" target="_blank">CloseAI</a>
-            <a href="https://yeka.ai/pay-service" target="_blank">WildCard</a>
-        </div>
-        <div class="column">
-            <h3>Other</h3>
-            <a href="https://www.revshells.com/" target="_blank">RRevshell</a>
-            <a href="https://test.ustc.edu.cn/" target="_blank">USTC Test Speed </a>
-            <a href="https://www.speedtest.net/" target="_blank">Speed Test</a>
-            <a href="https://www.dnsgrep.cn/" target="_blank">Dnsgrep</a>
-            <a href="https://tool.chinaz.com/" target="_blank">CChinaz</a>
-            <a href="https://ping.pe/" target="_blank">Ping Test</a>
-            <a href="https://fofa.info/" target="_blank">FOFA</a>
-            <a href="https://www.zoomeye.org/discover" target="_blank">Zoomeye</a>
-            <a href="https://www.shodan.io/" target="_blank">Shodan</a>
-            <a href="https://www.censys.io/" target="_blank">Censys</a>
-            <a href="https://www.binaryedge.io/" target="_blank">BinaryEdge</a>
-            <a href="https://hunter.qianxin.com/" target="_blank">QiAnXin</a>
-        </div>
-    </div>
+    <footer class="footer">
+        <p>© 2024 waiwai24. All rights reserved.</p>
+    </footer>
 
     <script src="scripts/config.js"></script>
-    <script src="scripts/themeManger.js"></script>
-
-    <!-- 新增内容 -->
-    <footer>
-        <div class="copyright">
-            <p class="text-copyright">Copyright © 2025 waiwai. All Rights Reserved.</p>
-        </div>
-    </footer>
 </body>
 </html>
