--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <p>📚 Motto: The world is deep.And deeper than the day could read</p>
                     <p>❤️ Interest: All the interesting things</p>
                     <p>🐙 Github : <a href="https://github.com/waiwai24" target="_blank">https://github.com/waiwai24</a></p>
-                    <p>📧 Mail: <a href="mailto:waiwai.website.mail@gmail.com">waiwai.website.mail@gmail.com</a></p>
+                    <p>📧 Mail: <a href="mailto:mail@waiwai.website">mail@waiwai.website</a></p>
                 </div>
             </section>
 
