--- a/project.html
+++ b/project.html
@@ -5,150 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Project</title>
   <link rel="icon" href="favicon.png" type="image/png" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style-project-tool.css" />
   <link rel="stylesheet" href="header-style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-  <style>
-    :root{
-      --bg: #ffffff;
-      --text: #212529;
-      --muted: #6c757d;
-      --line: #e9ecef;
-      --card: #fbfdff;
-      --accent: #4263eb;
-      --glass: rgba(66,99,235,0.06);
-    }
-
-    body{
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 2rem;
-      background: var(--bg);
-      color: var(--text);
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      transition: background 0.25s ease, color 0.25s ease;
-    }
-
-    header{
-      margin-bottom: 1.25rem;
-    }
-
-
-    .project-list{
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
-    }
-
-    /* 精致卡片样式（极简但更有质感） */
-    a.project-item{
-      display: grid;
-      grid-template-columns: 180px 1fr;
-      gap: 16px;
-      align-items: center;
-      text-decoration: none;
-      color: inherit;
-      background: linear-gradient(180deg, var(--card), #fff);
-      border-radius: 12px;
-      padding: 12px;
-      border: 1px solid var(--line);
-      box-shadow: 0 6px 18px rgba(17,24,39,0.06);
-      transition: transform 180ms ease, box-shadow 180ms ease, border-color 180ms ease, background 180ms ease;
-      overflow: hidden;
-    }
-
-    a.project-item:hover{
-      transform: translateY(-6px);
-      box-shadow: 0 18px 40px rgba(17,24,39,0.10);
-      border-color: rgba(66,99,235,0.12);
-      background: linear-gradient(180deg,#ffffff,#fbfdff);
-    }
-
-    /* 缩略图 */
-    .thumb{
-      width: 100%;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 10px;
-      background: linear-gradient(135deg,#eef2f7,#f8fbff);
-      box-shadow: inset 0 -8px 30px rgba(0,0,0,0.03);
-      flex-shrink: 0;
-    }
-
-    /* 元信息 */
-    .meta{
-      display:flex;
-      flex-direction:column;
-      gap:6px;
-      min-width:0;
-    }
-
-    .title{
-      font-size:1.05rem;
-      font-weight:650;
-      margin:0;
-      color:var(--text);
-      line-height:1.15;
-      display:block;
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-    }
-
-    .desc{
-      margin:0;
-      color:var(--muted);
-      font-size:0.95rem;
-      line-height:1.5;
-      max-width:100%;
-      word-break:break-word;
-    }
-
-    /* 小的仓库元（位置预留，未来可显示 stars 等） */
-    .repo-meta{
-      display:flex;
-      gap:10px;
-      align-items:center;
-      margin-top:6px;
-      font-size:0.85rem;
-      color:var(--muted);
-    }
-
-    footer{
-      margin-top:2rem;
-      text-align:center;
-      color:var(--muted);
-      font-size:0.9rem;
-    }
-
-    /* 响应式优化 */
-    @media (max-width: 900px){
-      a.project-item{
-        grid-template-columns: 140px 1fr;
-      }
-      .thumb{ height:110px; }
-    }
-
-    @media (max-width: 600px){
-      body{ padding:1rem; max-width:100%; }
-      a.project-item{
-        grid-template-columns: 1fr;
-        grid-auto-rows: auto;
-        gap:12px;
-        align-items:start;
-      }
-      .thumb{ width:100%; height:160px; }
-      .title{ white-space:normal; }
-      .repo-meta{ flex-wrap:wrap; gap:8px 12px; }
-    }
-  </style>
 </head>
 <body class="project-page">
+  <a href="#main-content" class="skip-link">Skip to main content</a>
   <header style="text-align: center;">
     <h1 class="page-title"><a href="index.html">Project</a></h1>
   </header>
 
-  <main>
+  <main id="main-content" role="main">
     <div class="project-list" aria-live="polite">
       <a class="project-item" href="https://github.com/waiwai24/rust-c2-framework" target="_blank" rel="noopener" aria-label="rust-c2-framework 仓库">
         <img class="thumb" src="https://opengraph.githubassets.com/1/waiwai24/rust-c2-framework" alt="rust-c2-framework 仓库封面" loading="lazy" />
