--- a/tool.html
+++ b/tool.html
@@ -5,132 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Google Search</title>
     <link rel="icon" href="favicon.png" type="image/png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-project-tool.css" />
     <link rel="stylesheet" href="header-style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start; /* 将内容靠上对齐 */
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            padding-top: 40px; /* 添加顶部内边距 */
-            font-family: Arial, sans-serif;
-            background-color: #ffffff;
-            transition: background 0.3s, color 0.3s;
-        }
-
-
-        .search-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-
-        .search-container p {
-            margin-bottom: 10px;
-            font-size: 18px;
-            color: inherit;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 10px 20px;
-            font-size: 16px;
-            border: 1px solid #dfe1e5;
-            border-radius: 24px;
-            box-shadow: none;
-            outline: none;
-            transition: box-shadow 0.3s;
-        }
-
-        input[type="text"]:focus {
-            box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
-        }
-
-        .buttons {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        input[type="submit"] {
-            padding: 10px 20px;
-            font-size: 14px;
-            margin: 0 5px;
-            border: 1px solid #dfe1e5;
-            border-radius: 4px;
-            background-color: #f8f9fa;
-            color: #3c4043;
-            cursor: pointer;
-            transition: background-color 0.3s, box-shadow 0.3s;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #f1f3f4;
-            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-        }
-
-        input[type="submit"]:active {
-            background-color: #e8eaed;
-            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-        }
-
-        .links {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr); /* 创建三列布局 */
-            gap: 20px; /* 列之间的间距 */
-            margin-top: 20px;
-            width: 100%;
-            max-width: 1200px;
-            margin-left: auto; /* 新增：使其水平居中 */
-            margin-right: auto; /* 新增：使其水平居中 */
-        }
-
-        .column {
-            display: flex;
-            flex-direction: column;
-            align-items: center; /* 让 h3 居中 */
-            margin: 10px;
-        }
-
-        .column h3 {
-            font-size: 18px;
-            margin-bottom: 10px;
-            color: inherit; /* 继承父元素的颜色 */
-            text-align: center; /* 确保 h3 居中 */
-        }
-        
-        .column a {
-            display: block;
-            margin: 5px 0;
-            color: inherit; /* 继承父元素的颜色 */
-            text-decoration: none;
-            font-size: 16px;
-            text-align: left; /* 让 a 左对齐 */
-        }
-
-        .links a {
-            display: block;
-            margin: 5px 0;
-            color: inherit; /* 继承父元素的颜色 */
-            text-decoration: none;
-            font-size: 16px;
-        }
-
-        .links a:hover {
-            text-decoration: underline;
-        }
-    </style>
 </head>
 <body>
-    <div class="main-content" style="flex-grow: 1; width: 100%;">
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+    <div class="main-content" id="main-content" style="flex-grow: 1; width: 100%;">
         <div class="search-container">
             <h1 class="page-title"><a href="index.html">Tool</a></h1>
             <form action="https://www.google.com/search" method="get">
