feat: restructure homepage layout and improve accessibility
- Remove skip links from all pages as they were redundant with existing navigation
- Move contact links from separate section into main navigation cards for unified layout
- Add dedicated connect section placeholder for future content
- Simplify footer styling and improve spacing consistency
- Remove redundant card hover effects and focus styles
- Maintain accessibility with proper ARIA labels and semantic HTML

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 </head>
 <body class="home">
 
-    <!-- Skip to main content link for keyboard users -->
-    <a href="#main-content" class="skip-link">Skip to main content</a>
 
     <!-- 主容器 -->
     <div class="container">
@@ -33,6 +31,11 @@
                     <p>📚 Motto: The world is deep.And deeper than the day could read</p>
                     <p>❤️ Interest: All the interesting things</p>
                 </div>
+            </section>
+
+            <!-- Connect Section -->
+            <section class="connect-section">
+                <h2></h2>
             </section>
 
             <!-- 导航卡片 -->
@@ -57,25 +60,25 @@
                         <h2>Tools</h2>
                     </a>
                 </article>
+                <article class="card">
+                    <a href="https://github.com/waiwai24" target="_blank" rel="noopener noreferrer" class="card-title-link">
+                        <i class="fab fa-github tile-icon" aria-hidden="true"></i>
+                        <h2>GitHub</h2>
+                    </a>
+                </article>
+                <article class="card">
+                    <a href="mailto:mail@waiwai.website" class="card-title-link">
+                        <i class="fas fa-envelope tile-icon" aria-hidden="true"></i>
+                        <h2>Email</h2>
+                    </a>
+                </article>
+                <article class="card">
+                    <a href="#" class="card-title-link">
+                        <i class="fas fa-blog tile-icon" aria-hidden="true"></i>
+                        <h2>Blog</h2>
+                    </a>
+                </article>
             </nav>
-
-            <!-- 联系方式 -->
-            <section class="contact-section">
-                <div class="contact-links">
-                    <a href="https://github.com/waiwai24" target="_blank" rel="noopener noreferrer" class="contact-link github" aria-label="GitHub profile (opens in new window)">
-                        <i class="fab fa-github" aria-hidden="true"></i>
-                        <span>GitHub</span>
-                    </a>
-                    <a href="mailto:mail@waiwai.website" class="contact-link email" aria-label="Send email">
-                        <i class="fas fa-envelope" aria-hidden="true"></i>
-                        <span>Email</span>
-                    </a>
-                    <a href="#" class="contact-link blog" aria-label="Blog">
-                        <i class="fas fa-blog" aria-hidden="true"></i>
-                        <span>Blog</span>
-                    </a>
-                </div>
-            </section>
         </main>
 
         <!-- 页脚 -->
